# atelia-secretary

./: .gitignore  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.ja.md  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_task.yml  ax-feedback.yml
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md
crates/atelia-core/: Cargo.toml
crates/atelia-core/src/: artifacts.rs  domain.rs  extensions.rs  lib.rs  policy.rs  runtime.rs  settings.rs  store.rs  tool_output.rs  tools.rs
crates/atelia-core/tests/: extension_manifest_compatibility.rs  tool_output_compatibility.rs
crates/atelia-core/tests/fixtures/extensions/: local_process.json  official_observational_memory.json  third_party_backend.json
crates/atelia-core/tests/fixtures/tool_output/: canonical.json  canonical.toon  customizer_filtered.json  customizer_filtered.toon  customizer_with_refs.json  customizer_with_refs.toon
crates/ateliad/: Cargo.toml
crates/ateliad/src/: main.rs  rpc.rs  service.rs  transport.rs
docs/: README.ja.md  README.md  agent-workflows.ja.md  agent-workflows.md  architecture.ja.md  architecture.md  error-recovery.ja.md  error-recovery.md  execution-semantics.ja.md  execution-semantics.md  extensions-runtime.ja.md  extensions-runtime.md  implementation-breakdown.ja.md  implementation-breakdown.md  mdp-runtime-contract.ja.md  mdp-runtime-contract.md  mvp-runtime-contract.ja.md  mvp-runtime-contract.md  operational-ax-analytics.ja.md  operational-ax-analytics.md  policy-approval.ja.md  policy-approval.md  protocol-contract.ja.md  protocol-contract.md  release.ja.md  release.md  runtime-architecture.ja.md  runtime-architecture.md  security.ja.md  security.md  storage-ledger.ja.md  storage-ledger.md  tool-catalog.ja.md  tool-catalog.md  tool-definition-schema.ja.md  tool-definition-schema.md  tool-output-schema.ja.md  tool-output-schema.md
docs/adr/: 0001-rust-daemon-native-clients.ja.md  0001-rust-daemon-native-clients.md
docs/philosophy/: secretary.ja.md  secretary.md
docs/research/: agent-harness-survey.ja.md  agent-harness-survey.md
proto/atelia/v1/: secretary.proto
