[package]
name = "ateliad"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
async-stream = "0.3"
atelia-core = { path = "../atelia-core" }
axum = "0.8"
getrandom = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2.6.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
